--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,11 @@ h1, h2, h3, h4, h5 {
 .bar{
     display: flex;
     flex-wrap: wrap;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin:auto;
+    /* width:100%;
+    height: 100%; */
     width:300px;
     height: 100px;
     }
